--- a/install.txt
+++ b/install.txt
@@ -1,16 +1,13 @@
-pip3 install selenium
-pip3 install webdrivermanager
-
-pip3 install pytesseract
+update-alternatives --config python
 
 sudo apt install libjpeg-dev zlib1g-dev
-pip3 install Pillow
-
 sudo apt install libpython3.7-dev
 sudo apt-get install libleptonica-dev tesseract-ocr tesseract-ocr-dev libtesseract-dev python3-pil tesseract-ocr-eng tesseract-ocr-script-latn
-
-pip install tesseract-ocr
-
 sudo apt install libtesseract-dev
-
 sudo apt-get install tesseract-ocr
+
+pip3 install selenium
+pip3 install webdrivermanager
+pip3 install pytesseract
+pip3 install Pillow
+pip3 install tesseract-ocr
